--- a/pythonsty/basic.ipynb
+++ b/pythonsty/basic.ipynb
@@ -140,8 +140,85 @@
     "你就需要错误分支\n",
     "\n",
     "> It is easier to ask for forgiveness than permission  \n",
-    "> —— Python 之父 Guido van Rossum\n"
+    "> —— Python 之父 Guido van Rossum\n",
+    "\n",
+    "```python\n",
+    "try:\n",
+    "      pass\n",
+    "except:\n",
+    "      pass # 出错做什么\n",
+    "else:\n",
+    "      # hahhahahahahhahhahhahhhahhahhhahhahhahhahhahhahhha\n",
+    "finally:\n",
+    "      pass # 无论什么都做\n",
+    "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "12\n",
+      "division by zero\n",
+      "13\n",
+      "Ctrl+C has press\n",
+      "14\n",
+      "42\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 24\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m14\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 24\u001b[0m     a\u001b[38;5;241m=\u001b[39m\u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(e)\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a = 1 + 1\n",
+    "except ZeroDivisionError as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    print(a)\n",
+    "finally:\n",
+    "    print(12)\n",
+    "try:\n",
+    "    a = 1 / 0\n",
+    "except ZeroDivisionError as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    print(a)\n",
+    "finally:\n",
+    "    print(13)\n",
+    "try:\n",
+    "    raise KeyboardInterrupt\n",
+    "except (KeyboardInterrupt, ZeroDivisionError) as e:\n",
+    "    print(\"Ctrl+C has press\")\n",
+    "finally:\n",
+    "    print(14)\n",
+    "try:\n",
+    "    a = 1 / 0\n",
+    "except KeyboardInterrupt as e:\n",
+    "    print(e)\n",
+    "finally:\n",
+    "    print(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
