--- a/pythonsty/dataplay.ipynb
+++ b/pythonsty/dataplay.ipynb
@@ -4,17 +4,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# numpy\n",
+    "\n",
+    "---\n",
+    "\n",
+    "> python 效率代表\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数据结构\n",
+    "\n",
+    "ndarry\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 1, 1, 1]),\n",
+       " array([[1, 1],\n",
+       "        [1, 1]]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1, 1, 1, 1])\n",
+    "b = np.array([[1, 1], [1, 1]])\n",
+    "a,b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# pandas\n",
     "\n",
     "---\n",
     "\n",
-    ">\n"
+    "> 可爱的熊猫\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
