--- a/pythonsty/dataplay.ipynb
+++ b/pythonsty/dataplay.ipynb
@@ -230,6 +230,48 @@
     "\n",
     "> 可爱的熊猫\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original columns: Index(['站点顺序号', '站点名称', '生态系统类型', '纬度（°N）', '经度（°E）', '观测年份',\n",
+      "       'AGPP（gC m-2 yr-1)', 'MAT（℃）', 'MAP（mm yr -1）', 'PAR（MJ m-2 yr-1）',\n",
+      "       'PET（mm yr -1）', 'VPD(kpa)', 'ρc,yr（mgCO2m-3）', 'SM（m3 m-3）',\n",
+      "       'SOC(gC m-2)', 'STN（gN m-2)', 'LAI（m2 m-2）', 'MLAI（m2 m-2）',\n",
+      "       '重复标志（1为重复）', '参考文献'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "Modified columns after slicing first three characters:\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "a = pd.read_excel(r\"..\\data\\中国陆地生态系统站点观测年总初级生产力数据集.xlsx\")\n",
+    "\n",
+    "\n",
+    "def kill(k):\n",
+    "    try:\n",
+    "        return k[0:-1]\n",
+    "    except:\n",
+    "        return k\n",
+    "\n",
+    "\n",
+    "new = a.map(kill)\n",
+    "modified_columns = new.columns.str[0:3]\n",
+    "print(\"Original columns:\", new.columns)\n",
+    "print(\"\\nModified columns after slicing first three characters:\")\n",
+    "new.columns = modified_columns\n",
+    "print(new.columns)\n",
+    "new.to_excel(\"product.xlsx\")"
+   ]
   }
  ],
  "metadata": {
