--- a/pythonsty/dataplay.ipynb
+++ b/pythonsty/dataplay.ipynb
@@ -190,34 +190,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0.47002863, 0.24642251, 0.93379835, 0.02271212],\n",
-       "        [0.78187646, 0.79585515, 0.71179189, 0.11514007],\n",
-       "        [0.48355926, 0.22869706, 0.96026539, 0.77591674],\n",
-       "        [0.26232314, 0.94526284, 0.8789435 , 0.02798596]]),\n",
-       " array([ 1.31852693, -0.27223958,  3.84051327]),\n",
-       " array([0.77459344, 0.31222066, 0.68692283, 0.28516574]))"
+       "(array([[0.04340055, 0.23518814, 0.11763285, 0.78640522],\n",
+       "        [0.09358379, 0.99329944, 0.63739054, 0.00348929],\n",
+       "        [0.65711287, 0.79079108, 0.44320066, 0.87679285],\n",
+       "        [0.44324274, 0.38317774, 0.01907671, 0.14561872]]),\n",
+       " array([ 0.29392213, -0.69359169,  4.43663021]),\n",
+       " array([0.43343925, 0.9686345 , 0.25966091, 0.41936541]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy.random as nr\n",
+    "import numpy as np\n",
     "\n",
-    "a = nr.random((4, 4))\n",
+    "a = np.random.random((4, 4))\n",
     "\n",
-    "b = nr.normal((1, 1, 4))  # 正态分布\n",
+    "b = np.random.normal((1, 1, 4))  # 正态分布\n",
     "\n",
-    "c = nr.rand(4)\n",
+    "c = np.random.rand(4)\n",
     "a, b, c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "操作数组的方法有：\n",
+    "\n",
+    "1. numpy 内建函数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.29392213 0.69359169 4.43663021]\n",
+      "[ 0.28970837 -0.63930315 -0.96221888]\n",
+      "True\n",
+      "1.345653548452231\n",
+      "[ 0.29392213 -0.69359169  4.43663021]\n",
+      "2.22252085183687\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.29392213, 0.69359169, 4.43663021]),\n",
+       " array([ 0.28970837, -0.63930315, -0.96221888]),\n",
+       " np.True_,\n",
+       " np.float64(1.345653548452231),\n",
+       " array([ 0.29392213, -0.69359169,  4.43663021]),\n",
+       " np.float64(2.22252085183687))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = np.abs(b)\n",
+    "e = np.sin(b)\n",
+    "f = np.all(b)\n",
+    "g = b.mean()\n",
+    "h = b.T\n",
+    "i = b.std()\n",
+    "j = np.max()\n",
+    "print(d, e, f, g, h, i, sep=\"\\n\")\n",
+    "d, e, f, g, h, i"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 操作符\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18.46751402 22.74907598 17.07728728 18.3549233 ]\n",
+      "[36.93502804 45.49815195 34.15457457 36.70984661]\n",
+      "[[0.68946773 0.3153959  0.95615319 0.22611521]\n",
+      " [0.3153959  1.40168059 1.13253875 0.43475799]\n",
+      " [0.95615319 1.13253875 2.0223404  0.73040631]\n",
+      " [0.22611521 0.43475799 0.73040631 0.36485804]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c += 1\n",
+    "print(c)\n",
+    "c *= 2\n",
+    "print(c)\n",
+    "print(a @ a.T)  # 求法向量"
    ]
   },
   {
@@ -229,6 +316,17 @@
     "---\n",
     "\n",
     "> 可爱的熊猫\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pandas 的数据主要是以`DataFrame`存储，是一个表。\n",
+    "||纬度（°N）|经度（°E）| 观测年份|AGPP（gC m-2 yr-1)|MAT（℃）|\n",
+    "|---|---|---|---|---|---|\n",
+    "|nih|18.73|108.89|2,006|1,919|20.84|\n",
+    "|66|18.73|108.89|2,007|1,919|20.61|\n"
    ]
   },
   {
@@ -245,32 +343,15 @@
       "       'PET（mm yr -1）', 'VPD(kpa)', 'ρc,yr（mgCO2m-3）', 'SM（m3 m-3）',\n",
       "       'SOC(gC m-2)', 'STN（gN m-2)', 'LAI（m2 m-2）', 'MLAI（m2 m-2）',\n",
       "       '重复标志（1为重复）', '参考文献'],\n",
-      "      dtype='object')\n",
-      "\n",
-      "Modified columns after slicing first three characters:\n"
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "a = pd.read_excel(r\"..\\data\\中国陆地生态系统站点观测年总初级生产力数据集.xlsx\")\n",
     "\n",
-    "\n",
-    "def kill(k):\n",
-    "    try:\n",
-    "        return k[0:-1]\n",
-    "    except:\n",
-    "        return k\n",
-    "\n",
-    "\n",
-    "new = a.map(kill)\n",
-    "modified_columns = new.columns.str[0:3]\n",
-    "print(\"Original columns:\", new.columns)\n",
-    "print(\"\\nModified columns after slicing first three characters:\")\n",
-    "new.columns = modified_columns\n",
-    "print(new.columns)\n",
-    "new.to_excel(\"product.xlsx\")"
+    "a = pd.read_excel(r\"..\\data\\中国陆地生态系统站点观测年总初级生产力数据集.xlsx\")"
    ]
   }
  ],
