--- a/pythonsty/dataplay.ipynb
+++ b/pythonsty/dataplay.ipynb
@@ -233,29 +233,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **矩阵点积**：\n",
-    "\n",
-    "   - 如果你有两个向量 $ \\mathbf{a} $ 和 $ \\mathbf{b} $，它们的点积（内积）定义为：\n",
-    "     $\n",
-    "     \\mathbf{a} \\cdot \\mathbf{b} = a_1 b_1 + a_2 b_2 + \\dots + a_n b_n\n",
-    "     $\n",
-    "   - 对于矩阵来说，点积通常指的是行向量与列向量的点积。例如，如果有矩阵 $ A $ 和矩阵 $ B $，那么它们的乘积 $\n",
-    "     AB $ 是由行向量和列向量逐一点积组成的新矩阵。\n",
-    "\n",
-    "2. **矩阵转置**：\n",
-    "\n",
-    "   - 矩阵的转置是将其行与列互换。例如，矩阵 $ A $ 的转置为 $ A^T $，表示 $ A^T $ 中的第 $ i $ 行变成了原来的\n",
-    "     第 $ i $ 列。\n",
-    "     $\n",
-    "     A = \\begin{bmatrix}\n",
-    "     a*{11} & a*{12} \\\\\n",
-    "     a*{21} & a*{22}\n",
-    "     \\end{bmatrix}, \\quad\n",
-    "     A^T = \\begin{bmatrix}\n",
-    "     a*{11} & a*{21} \\\\\n",
-    "     a*{12} & a*{22}\n",
-    "     \\end{bmatrix}\n",
-    "     $\n"
+    "> 1. **矩阵点积**：\n",
+    ">\n",
+    "> - 如果你有两个向量 $ \\mathbf{a} $ 和 $ \\mathbf{b} $，它们的点积（内积）定义为：\n",
+    ">     $\n",
+    ">   \\mathbf{a} \\cdot \\mathbf{b} = a_1 b_1 + a_2 b_2 + \\dots + a_n b_n\n",
+    ">   $\n",
+    "> - 对于矩阵来说，点积通常指的是行向量与列向量的点积。例如，如果有矩阵 $ A $ 和矩阵 $ B $，那么它们的乘积 $\n",
+    ">   AB $ 是由行向量和列向量逐一点积组成的新矩阵。\n",
+    ">\n",
+    "> 2. **矩阵转置**：\n",
+    ">\n",
+    "> - 矩阵的转置是将其行与列互换。例如，矩阵 $ A $ 的转置为 $ A^T $，表示 $ A^T $ 中的第 $ i $ 行变成了原来的\n",
+    ">   第 $ i $ 列。\n",
+    ">   $\n",
+    ">   A = \\begin{bmatrix}\n",
+    ">   a*{11} & a*{12} \\\\\n",
+    ">   a*{21} & a*{22}\n",
+    ">   \\end{bmatrix}, \\quad\n",
+    ">   A^T = \\begin{bmatrix}\n",
+    ">   a*{11} & a*{21} \\\\\n",
+    ">   a*{12} & a*{22}\n",
+    ">   \\end{bmatrix}\n",
+    ">   $\n"
    ]
   },
   {
@@ -355,24 +355,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Administrator.PC-202104131141.000\\AppData\\Local\\Temp\\ipykernel_6840\\2753412527.py:4: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  normalizedData = (data-data.mean())/np.sqrt(data-data.mean()**2)\n"
+      "C:\\Users\\Administrator.PC-202104131141.000\\AppData\\Local\\Temp\\ipykernel_6292\\813044945.py:8: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  normalizedData = (data - data.mean()) / np.sqrt(data - data.mean() ** 2)\n"
      ]
     }
    ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "\n",
-    "data = np.array([[10, 20], [30, 40], [5, 15], [0, 10]])\n",
-    "\n",
-    "\n",
-    "normalizedData = (data - data.mean()) / np.sqrt(data - data.mean() ** 2)\n",
-    "\n",
-    "\n",
-    "print(normalizedData)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -398,81 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     站点顺序号     站点名称 生态系统类型    纬度（°N）     经度（°E）  观测年份  AGPP（gC m-2 yr-1)  \\\n",
-      "0        1   尖峰岭森林'    森林'  18.72972  108.88972  2006        1919.000000   \n",
-      "1        1   尖峰岭森林'    森林'  18.72972  108.88972  2007        1919.000000   \n",
-      "2        1   尖峰岭森林'    森林'  18.72972  108.88972  2008        2138.000000   \n",
-      "3        1   尖峰岭森林'    森林'  18.72972  108.88972  2009        1904.000000   \n",
-      "4        2  儋州橡胶林2'    森林'  19.53790  109.46840  2013        2239.893154   \n",
-      "..     ...      ...    ...       ...        ...   ...                ...   \n",
-      "867    166    呼中森林'    森林'  51.11850  123.00260  2016         792.895920   \n",
-      "868    166    呼中森林'    森林'  51.11850  123.00260  2017         758.402841   \n",
-      "869    166    呼中森林'    森林'  51.11850  123.00260  2018         870.668074   \n",
-      "870    166    呼中森林'    森林'  51.11850  123.00260  2007         774.460000   \n",
-      "871    166    呼中森林'    森林'  51.11850  123.00260  2008         703.590000   \n",
-      "\n",
-      "        MAT（℃）  MAP（mm yr -1）  PAR（MJ m-2 yr-1）  PET（mm yr -1）  VPD(kpa)  \\\n",
-      "0    20.843288    1183.656683       2842.787468    1256.887448  0.525195   \n",
-      "1    20.609455    1080.848619       2723.291438    1250.564406  0.549332   \n",
-      "2    19.860581    1895.860437       2575.773190    1211.084410  0.504212   \n",
-      "3    20.943657    1994.032366       2670.678940    1262.928758  0.584169   \n",
-      "4    24.004523    2049.527788       2678.860352    1160.083154  0.670545   \n",
-      "..         ...            ...               ...            ...       ...   \n",
-      "867  -3.234723     483.377410       1904.806252     590.087144  0.263052   \n",
-      "868  -2.434834     434.281500       1861.261343     631.202411  0.296067   \n",
-      "869  -2.555139     526.450837       1862.407466     618.786720  0.274403   \n",
-      "870  -2.279710     364.284866       1934.857452     631.040073  0.317711   \n",
-      "871  -2.040991     452.705669       1858.450516     610.745235  0.285212   \n",
-      "\n",
-      "     ρc,yr（mgCO2m-3）  SM（m3 m-3）  SOC(gC m-2)  STN（gN m-2)  LAI（m2 m-2）  \\\n",
-      "0         715.037608    0.557954      1841.67      133.380     4.041304   \n",
-      "1         718.841368    0.595567      1841.67      133.380     4.865217   \n",
-      "2         724.523098    0.625159      1841.67      133.380     4.369565   \n",
-      "3         724.847007    0.574246      1841.67      133.380     4.065217   \n",
-      "4         772.801622    0.546073       326.25       50.625     3.202174   \n",
-      "..               ...         ...          ...          ...          ...   \n",
-      "867       787.285709    0.152884       971.73       82.350     2.684783   \n",
-      "868       789.373316    0.135668       971.73       82.350     1.993478   \n",
-      "869       794.328257    0.145561       971.73       82.350     2.436957   \n",
-      "870       745.487479    0.097082       971.73       82.350     2.141304   \n",
-      "871       748.987187    0.103069       971.73       82.350     2.106522   \n",
-      "\n",
-      "     MLAI（m2 m-2）  重复标志（1为重复）  \\\n",
-      "0             6.2           0   \n",
-      "1             6.2           0   \n",
-      "2             6.4           0   \n",
-      "3             5.9           0   \n",
-      "4             5.1           0   \n",
-      "..            ...         ...   \n",
-      "867           6.2           0   \n",
-      "868           5.7           0   \n",
-      "869           5.7           0   \n",
-      "870           4.9           0   \n",
-      "871           5.6           0   \n",
-      "\n",
-      "                                                  参考文献  \n",
-      "0                   陈德祥.2010.尖峰岭热带山地雨林碳交换的动态特征和影响因素研究'  \n",
-      "1                   陈德祥.2010.尖峰岭热带山地雨林碳交换的动态特征和影响因素研究'  \n",
-      "2                   陈德祥.2010.尖峰岭热带山地雨林碳交换的动态特征和影响因素研究'  \n",
-      "3                   陈德祥.2010.尖峰岭热带山地雨林碳交换的动态特征和影响因素研究'  \n",
-      "4    ChinaFLUX，张晓娟, 2016. 海南岛西部橡胶林生态系统蒸散特征研究, 海南大学,...  \n",
-      "..                                                 ...  \n",
-      "867                                         ChinaFLUX'  \n",
-      "868                                         ChinaFLUX'  \n",
-      "869                                         ChinaFLUX'  \n",
-      "870  周丽艳, 贾丙瑞, 周广胜, 曾伟, 王宇 (2010) 中国北方针叶林生长季碳交换及其调控...  \n",
-      "871  周丽艳, 贾丙瑞, 周广胜, 曾伟, 王宇 (2010) 中国北方针叶林生长季碳交换及其调控...  \n",
-      "\n",
-      "[872 rows x 20 columns]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -844,7 +760,7 @@
        "[872 rows x 20 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,24 +773,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "行（列）主要是用`Series`存储\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(4.684571016187578)"
+       "0      2006\n",
+       "1      2007\n",
+       "2      2008\n",
+       "3      2009\n",
+       "4      2013\n",
+       "       ... \n",
+       "867    2016\n",
+       "868    2017\n",
+       "869    2018\n",
+       "870    2007\n",
+       "871    2008\n",
+       "Name: 观测年份, Length: 872, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b = a.观测年份\n",
-    "b.std()"
+    "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以转换成`array`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy"
    ]
   }
  ],
